agregue los art que faltaban

--- a/essays.html
+++ b/essays.html
@@ -12,90 +12,267 @@
 
     <section class="ensayos">
       <div class="encabezado">
-        <h1>Articulos</h1>
+        <h1>Artículos</h1>
+        <div class="linea-azul"></div>
       </div>
+
       <div class="container">
-        <div class="hijo">
-          <a href="./art/resultado.pdf">
-            <img src="./img/dolares.jpg" alt="Dollars" />
-            <h3>BLABLABLABLALBLA</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos
-              debitis nam, eum rem eveniet nisi dolore placeat optio ad deleniti
-              mollitia asperiores pariatur culpa? Voluptate modi esse vero
-              repellat rerum?
-            </p>
+        <article class="hijo">
+          <a href="./art/resultado.pdf" class="card-enlace">
+            <div class="img-container">
+              <img src="./img/dolares.jpg" alt="Dollars" />
+            </div>
+            <div class="texto-hijo">
+              <h3>Desdolarización digital</h3>
+              <p>
+                Innovación tecnológica y poder estructural en el nuevo orden
+                financiero. Un análisis profundo de las tendencias globales.
+              </p>
+              <span class="leer-mas">Leer artículo &rarr;</span>
+            </div>
           </a>
-        </div>
-        <div class="hijo">
-          <img src="img/1.jpg" alt="imagen-uno" />
-          <a href="art/africaOccidental.pdf">
-            <h3>Fragmentación y Poder</h3>
-          </a>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-            minus.
-          </p>
-        </div>
-        <div class="hijo">
-          <img src="img/2.jpg" alt="imagen-dos" />
-          <a href="art/juridico.pdf">
-            <h3>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non alias
-              repudiandae modi sit aspernatur. Porro.
-            </h3>
-          </a>
+        </article>
 
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum,
-            vero rem eos minima possimus qui eligendi repellat consequuntur.
-            Incidunt dolores suscipit molestias labore? Alias eius ut soluta
-            excepturi eveniet quod quasi illum fuga, eum adipisci cumque,
-            exercitationem recusandae cupiditate aliquam totam incidunt
-            assumenda nesciunt error. Deleniti odio dolores obcaecati eligendi
-            iure soluta eos sequi quisquam? Quo maiores exercitationem, alias
-            explicabo nobis voluptatum. Accusantium omnis, impedit atque nulla
-            qui eveniet, quod est dolorum ducimus mollitia saepe. Alias quidem,
-            quasi assumenda odit molestias earum explicabo rerum vel nihil
-            debitis impedit corporis ad quo dolore eligendi repudiandae minus
-            quae magnam dolores, sit ipsum.
-          </p>
-        </div>
-        <div class="hijo">
-          <img src="img/3.jpg" alt="imagen-tres" />
-          <a href="art/reforma.pdf">
-            <h3>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
-              quo?
-            </h3>
+        <article class="hijo">
+          <a href="art/africaOccidental.pdf" class="card-enlace">
+            <div class="img-container">
+              <img src="img/1.jpg" alt="imagen-uno" />
+            </div>
+            <div class="texto-hijo">
+              <h3>
+                Colonialismo, dignidad y memoria: la reivindicación akan frente
+                al silencio británico
+              </h3>
+              <p>
+                Explora las demandas contemporáneas de reparación histórica de
+                los pueblos akan frente al legado del colonialismo británico. El
+                artículo analiza cómo memoria, dignidad y justicia histórica se
+                entrelazan en debates actuales sobre responsabilidad imperial y
+                reconocimiento simbólico
+              </p>
+              <span class="leer-mas">Leer artículo &rarr;</span>
+            </div>
           </a>
+        </article>
 
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut aperiam
-            dolor laudantium odit molestiae id blanditiis totam ducimus labore,
-            odio earum laborum minima libero quo explicabo quae reprehenderit
-            officiis dicta eligendi necessitatibus molestias sed qui delectus
-            quia. Corrupti aperiam rerum natus quaerat consectetur dolorem,
-            aliquid, ducimus sint exercitationem nostrum quisquam.
-          </p>
-        </div>
-        <div class="hijo">
-          <img src="img/4.jpg" alt="imagen-cuadro" />
-          <a href="./art/5.pdf">
-            <h3>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
-              ducimus mollitia consectetur eum quo nostrum!
-            </h3>
+        <article class="hijo">
+          <a href="art/juridico.pdf" class="card-enlace">
+            <div class="img-container">
+              <img src="img/2.jpg" alt="imagen-dos" />
+            </div>
+            <div class="texto-hijo">
+              <h3>
+                De la soberanía al compromiso global: Los tratados
+                internacionales en el sistema jurídico mexicano
+              </h3>
+              <p>
+                Examina la evolución del papel de los tratados internacionales
+                en México, desde una visión tradicional de soberanía hasta su
+                integración como fuente directa de derechos y obligaciones.
+                Destaca cómo el derecho internacional se ha incorporado
+                progresivamente al orden constitucional mexicano.
+              </p>
+              <span class="leer-mas">Leer artículo &rarr;</span>
+            </div>
           </a>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti,
-            harum ullam? Repudiandae exercitationem modi vel, fuga rem cumque
-            sed reprehenderit ipsa laudantium magnam ipsum optio, amet in quis
-            autem dicta eaque, incidunt ea magni aliquid dolores dolorem quae
-            nemo? Similique voluptatem sunt velit tempore ea perferendis
-            excepturi, nisi fuga ab.
-          </p>
-        </div>
+        </article>
+
+        <article class="hijo">
+          <a href="art/reforma.pdf" class="card-enlace">
+            <div class="img-container">
+              <img src="img/3.jpg" alt="imagen-tres" />
+            </div>
+            <div class="texto-hijo">
+              <h3>
+                Reforma de 2011 y control de convencionalidad: La
+                constitucionalización del derecho internacional en México
+              </h3>
+              <p>
+                Analiza el impacto de la reforma constitucional de 2011 en
+                derechos humanos y su relación con el control de
+                convencionalidad. El texto explica cómo los estándares
+                internacionales transformaron la interpretación judicial y
+                redefinieron la jerarquía normativa en el sistema jurídico
+                mexicano.
+              </p>
+              <span class="leer-mas">Leer artículo &rarr;</span>
+            </div>
+          </a>
+        </article>
+
+        <article class="hijo">
+          <a href="art/reforma.pdf" class="card-enlace">
+            <div class="img-container">
+              <img src="img//4.jpg" alt="imagen-cuatro" />
+            </div>
+            <div class="texto-hijo">
+              <h3>
+                Ala humanitaria: la aviación como infraestructura estratégica
+                frente a desastres naturales
+              </h3>
+              <p>
+                Estudia el papel de la aviación humanitaria en contextos de
+                emergencia, destacando su dimensión logística y política. El
+                artículo muestra cómo la ayuda aérea se inserta en tensiones
+                entre soberanía, cooperación internacional y gobernanza global
+                en situaciones de crisis.
+              </p>
+              <span class="leer-mas">Leer artículo &rarr;</span>
+            </div>
+          </a>
+        </article>
+
+        <article class="hijo">
+          <a href="art/6.pdf" class="card-enlace">
+            <div class="img-container">
+              <img
+                src="https://images.unsplash.com/photo-1544906243-a69767cc000b?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="imagen-cinco"
+              />
+            </div>
+            <div class="texto-hijo">
+              <h3>
+                De la herida colonial al caudillo: el personalismo estructural
+                en América Latina
+              </h3>
+              <p>
+                Analiza el personalismo político como fenómeno estructural
+                derivado de la herencia colonial y la fragilidad institucional
+                en América Latina. Explora cómo los caudillos del siglo XIX
+                moldearon la cultura política regional y dejaron legados
+                persistentes en la organización del poder
+              </p>
+              <span class="leer-mas">Leer artículo &rarr;</span>
+            </div>
+          </a>
+        </article>
+
+        <article class="hijo">
+          <a href="art/7.pdf" class="card-enlace">
+            <div class="img-container">
+              <img
+                src="https://cdn.pixabay.com/photo/2026/01/19/16/14/bureaucracy-10076954_1280.png"
+                alt="imagen-seis"
+              />
+            </div>
+            <div class="texto-hijo">
+              <h3>
+                Sangre y jerarquía: el sistema de castas y la estructura de
+                movilidad social en México
+              </h3>
+              <p>
+                Examina el sistema de castas como mecanismo de estratificación
+                social en el periodo colonial y sus efectos duraderos en la
+                desigualdad contemporánea. El artículo vincula raza, jerarquía y
+                movilidad social para entender las raíces históricas de las
+                brechas estructurales en México.
+              </p>
+              <span class="leer-mas">Leer artículo &rarr;</span>
+            </div>
+          </a>
+        </article>
+
+        <article class="hijo">
+          <a href="art/8.pdf" class="card-enlace">
+            <div class="img-container">
+              <img
+                src="https://cdn.pixabay.com/photo/2016/03/31/17/35/america-1293768_1280.png"
+                alt="imagen-siete"
+              />
+            </div>
+            <div class="texto-hijo">
+              <h3>
+                Propiedad, crédito y mérito: el credo individualista en Estados
+                Unidos y la construcción de la movilidad social
+              </h3>
+              <p>
+                Analiza los fundamentos culturales y económicos del
+                individualismo estadounidense, centrados en propiedad, crédito y
+                meritocracia. El texto cuestiona el mito de la movilidad social
+                y explora las tensiones entre narrativa meritocrática y
+                desigualdad estructural.
+              </p>
+              <span class="leer-mas">Leer artículo &rarr;</span>
+            </div>
+          </a>
+        </article>
+
+        <article class="hijo">
+          <a href="art/9.pdf" class="card-enlace">
+            <div class="img-container">
+              <img
+                src="https://cdn.pixabay.com/photo/2019/07/08/04/23/traveling-4323759_1280.png"
+                alt="imagen-ocho"
+              />
+            </div>
+            <div class="texto-hijo">
+              <h3>
+                ¿Puede sobrevivir el proyecto europeo? Integración, identidad y
+                el dilema de la soberanía
+              </h3>
+              <p>
+                Reflexiona sobre las tensiones entre integración regional y
+                soberanía nacional dentro del proyecto europeo. El artículo
+                examina desafíos como el auge del nacionalismo, las crisis
+                internas y la fragilidad del consenso político en torno al
+                futuro de Europa.
+              </p>
+              <span class="leer-mas">Leer artículo &rarr;</span>
+            </div>
+          </a>
+        </article>
+
+        <article class="hijo">
+          <a href="art/10.pdf" class="card-enlace">
+            <div class="img-container">
+              <img
+                src="https://cdn.pixabay.com/photo/2016/03/31/22/40/borders-1297160_1280.png"
+                alt="imagen-nueve"
+              />
+            </div>
+            <div class="texto-hijo">
+              <h3>
+                Europa y Rusia: ¿nueva Guerra Fría o redefinición del orden
+                continental?
+              </h3>
+              <p>
+                Analiza la guerra en Ucrania como punto de inflexión en la
+                arquitectura de seguridad europea. Explora si el conflicto
+                representa una nueva lógica de confrontación sistémica o una
+                transformación más compleja del orden geopolítico continental.
+              </p>
+              <span class="leer-mas">Leer artículo &rarr;</span>
+            </div>
+          </a>
+        </article>
+
+        <article class="hijo">
+          <a href="art/11.pdf" class="card-enlace">
+            <div class="img-container">
+              <img
+                src="https://cdn.pixabay.com/photo/2017/11/06/13/59/feminist-2923720_1280.png"
+                alt="imagen-diez"
+              />
+            </div>
+            <div class="texto-hijo">
+              <h3>
+                Descolonizar el desarrollo, el feminismo y el consumo: hacia
+                horizontes de vida comunitaria
+              </h3>
+              <p>
+                Este artículo explora las críticas latinoamericanas al paradigma
+                occidental del desarrollo, cuestionando su raíz colonial,
+                capitalista y patriarcal. A partir del concepto de Buen Vivir y
+                los feminismos descoloniales, el texto propone repensar
+                categorías como progreso, consumo y emancipación desde saberes
+                comunitarios y no occidentales. Más que una alternativa técnica,
+                plantea un cambio civilizatorio: reconstruir horizontes de vida
+                basados en el cuidado, la reciprocidad y la memoria colectiva.
+              </p>
+              <span class="leer-mas">Leer artículo &rarr;</span>
+            </div>
+          </a>
+        </article>
       </div>
     </section>
 
