--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forum Multipolar</title>
+    <title>
+      Forum Multipolar | Geopolítica, critico cartesiano, análisis internacional
+      y mundo multipolar
+    </title>
+
+    <meta
+      name="description"
+      content="Análisis sobre geopolítica, poder global, relaciones internacionales y el nuevo orden multipolar."
+    />
+
     <link rel="stylesheet" href="estilos/style.css" />
   </head>
 
@@ -14,7 +23,7 @@
       <div class="foto">
         <div class="rectangle">
           <a href="./art/resultado.pdf">
-            <h1>Desdolarización digital:</h1>
+            <h1>Desdolarización digital</h1>
           </a>
           <a href="./art/resultado.pdf">
             <div class="resume">
