agregue la revista

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
           </article>
         </div>
       </section>
+      <div id="revista-placeholder"></div>
     </main>
 
     <div id="footer-placeholder"></div>
@@ -119,6 +120,7 @@
           .catch((err) => console.error(err));
       }
       incluirHTML("navbar-placeholder", "components/nav.html");
+      incluirHTML("revista-placeholder", "components/magazine.html");
       incluirHTML("footer-placeholder", "components/footer.html");
     </script>
     <script type="text/javascript" src="javascript/nav.js"></script>
